Fix UnsupportedOperationException